<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.Transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/budget_dialog_frame_layout"
        style="@style/Theme.Transparent"
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:transitionName="@string/shared_element_fab">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/budget_dialog_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/budget_dialog_budget_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:hint="@string/budget_dialog_price_hint"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_dialog_currency"
                android:textColor="@color/colorPrimaryText" />
        </LinearLayout>

        <Button
            android:id="@+id/budget_dialog_ok_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_button_white"
            android:text="@string/budget_dialog_ok" />


    </FrameLayout>

</RelativeLayout>