<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/row_comic_book_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/comic_detail_cover_image_view"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/budget_money_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/budget_money"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/budget_comics_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/budget_comics_number"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/budget_pages_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="@string/budget_pages"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/budget_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />


</LinearLayout>



